@@ -1,3 +1,5 @@
+2016-09-18 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
+  * removed .scripts directory
 2016-09-17 Paweł Tomulik <ptomulik@meil.pw.edu.pl>
   * release 0.1.2
   * fix options_file_default_syntax to return :with_without instead of :with
